category import: fixed modal not visible

--- a/webapp/components/survey/CategoryDetails/ImportSummary/ImportSummary.scss
+++ b/webapp/components/survey/CategoryDetails/ImportSummary/ImportSummary.scss
@@ -1,7 +1,4 @@
 .category__import-summary {
-  display: grid;
-  grid-template-rows: 1fr 50px;
-
   .modal-header {
     display: grid;
     grid-template-columns: 1fr auto;
